# api/API.yaml
@@ -866,7 +866,22 @@ paths:
                 $ref: "Common.yaml#/components/schemas/Status"
         default:
           description: Default response
-
+  
+  "/readiness":
+    get:
+      summary: Readiness endpoint indicates if node is ready to start accepting traffic
+      tags:
+        - Status
+      responses:
+        "200":
+          description: Indicates that node is ready
+          $ref: "SwarmCommon.yaml#/components/responses/200"
+        "400":
+          description: Indicates that node is not ready
+          $ref: "SwarmCommon.yaml#/components/responses/400"
+        default:
+          description: Default response
+  
   "/balances":
     get:
       summary: Get the balances with all known peers including prepaid services
